# skills-manage

./: CHANGELOG.md  CHANGELOG.zh.md  CLAUDE.md  README.md  README_CN.md  package.json
.github/workflows/: ci.yml  release-desktop.yml
release-notes/: 0.10.0.md  0.11.0.md  0.12.0.md  0.13.0.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bundle/linux/: com.iamzhihuix.skillsmanage.metainfo.xml  skills-manage.desktop.hbs
src-tauri/src/: db.rs  lib.rs  path_utils.rs
src-tauri/src/commands/: agents.rs  collections.rs  discover.rs  github_import.rs  linker.rs  marketplace.rs  mod.rs  scanner.rs  settings.rs  skill_updates.rs  skills.rs  updater.rs
src/lib/: fileTree.ts
src/pages/: AllSkillsView.tsx  CentralSkillsView.tsx  CollectionDetailView.tsx  CollectionView.tsx  CollectionsListView.tsx  DiscoverView.tsx  MarketplaceView.tsx  ObsidianVaultView.tsx  PlatformView.tsx  SettingsView.tsx  SkillDetail.tsx
src/stores/: centralSkillsStore.ts  collectionStore.ts  discoverStore.ts  marketplaceStore.ts  obsidianStore.ts  platformStore.ts  settingsStore.ts  skillDetailStore.ts
src/test/: App.test.tsx  Button.test.tsx  CentralSkillsView.test.tsx  CollectionDetailView.test.tsx  CollectionEditor.test.tsx  CollectionInstallDialog.test.tsx  CollectionPickerDialog.test.tsx  CollectionView.test.tsx  CollectionsListView.test.tsx  DiscoverConfigDialog.test.tsx  DiscoverView.test.tsx  InstallDialog.test.tsx  MarketplaceView.test.tsx  ObsidianVaultView.test.tsx  PlatformIcon.test.tsx  PlatformInstallDrawer.test.tsx  SettingsView.test.tsx  Sidebar.test.tsx  (+9 more)
(+31 files in other folders)
