[package]
name = "skills-manage"
version = "0.12.0"
description = "AI Agent Skills Manager"
authors = ["iamzhihuix"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "skills_manage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
flate2 = "1"
tar = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
